# sandbox

./: Dockerfile  README.md
config/aio/: index.html
config/gem/: browser-ctl.sh  code-server.sh  entrypoint.sh  jupyter-lab.sh  matplotlibrc  mcp-ctl.sh  mcp-hub-wait.sh  mcp-hub.json  nginx-server-active.conf  nginx-server-port-proxy.conf  nginx-server-port-proxy.conf.template  nginx-server-with-auth.conf  nginx-server-without-auth.conf  nginx-wait.sh  nginx.conf  nginx.legacy.conf  nginx.mcp.conf  nginx.srv.conf  preferences.json  run.sh  start-browser.sh  supervisord.browser.conf  supervisord.mcp.conf  supervisord.openbox.conf  supervisord.srv.conf  supervisord.vnc.conf  tinyproxy.sh
config/gem-server/: gem-server  pyproject.toml
config/gem-server/src/gem/: cli.py  server.py
config/gem-server/src/gem/routers/: auth.py  cdp.py  gui.py  ping.py
config/gem-server/src/gem/utils/: resolution.py
config/gem/nginx/: legacy.conf  mcp_hub.conf  nginx.aio_index.conf  python_srv.conf  srv.conf
config/gem/supervisord/: supervisord.code_server.conf  supervisord.jupyter.conf  supervisord.mcp.conf  supervisord.mcp_hub.conf  supervisord.python_srv.conf
config/gem/tinyproxy/: base.conf
scripts/: build_image.sh  reverse_docker_image.sh
