[project]
name = "gem-server"
version = "0.1.0"
description = "GEM Browser Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cachelib>=0.13.0",
  "click>=8.2.1",
  "cryptography>=45.0.6",
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "pyautogui>=0.9.54",
  "pydantic>=2.11.7",
  "pyjwt>=2.10.1",
  "pyperclip>=1.9.0",
  "uvicorn[standard]>=0.35.0",
  "websockets>=15.0.1",
]

[dependency-groups]
dev = [
  "mypy>=1.16.1",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.1",
  "respx>=0.22.0",
  "ruff>=0.12.2",
  "types-pyautogui>=0.9.3.20241230",
]

[project.scripts]
gem-server = "gem.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
gem = ["scripts/*"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["gem"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]
